--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_BASE_URL=http://localhost:8000/api/v1
+# VITE_BASE_URL=http://localhost:8000/api/v1
+VITE_BASE_URL=https://mellow-meadow-maraca.glitch.me/api/v1
 
 VITE_NEWS_BASE_URL=https://newsapi.org/v2
 VITE_NEWS_API_KEY=3d6daf7122a44abc969c0578f8b3a645
