add skeleton and change the news api source

--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
 # VITE_BASE_URL=http://localhost:8000/api/v1
 VITE_BASE_URL=https://mellow-meadow-maraca.glitch.me/api/v1
 
-VITE_NEWS_BASE_URL=https://newsapi.org/v2
-VITE_NEWS_API_KEY=3d6daf7122a44abc969c0578f8b3a645
+# the base url for the news api and the api key
+# VITE_NEWS_BASE_URL=https://newsapi.org/v2
+# VITE_NEWS_API_KEY=3d6daf7122a44abc969c0578f8b3a645
+
+# gnews api key ans base url
+# VITE_NEWS_BASE_URL=https://gnews.io/api/v4
+# VITE_NEWS_API_KEY=c054b498a41443932fb9a95027688816
+
+# the base url for the guardian api and the api key
+VITE_NEWS_BASE_URL=https://content.guardianapis.com
+VITE_NEWS_API_KEY=a56110e3-d125-4991-a285-c564233b1046
